# agh-stochastic-ml

./: README.md
lab1/: lab1_solution.ipynb
lab10/: instructions.ipynb
lab11/: instructions.ipynb  pyproject.toml
lab12/: instructions.ipynb  pyproject.toml
lab2/: README.md
lab3/: instructions_JH.ipynb
lab4/: dmarek.ipynb  instructions_JH.ipynb
lab5/: example.db  lab5_solution_JH.html  lab5_solution_JH.ipynb
lab5/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
lab5/catboost_info/learn/: events.out.tfevents
lab5/catboost_info/test/: events.out.tfevents
lab6/: instructions.ipynb  instructions_JH.ipynb
lab7_new/: instructions.ipynb
lab8/: README.md  instructions.ipynb  instructions_dm.ipynb  pyproject.toml
lab9_new/: README.md
